--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,6 +46,10 @@ jobs:
           mysql user: ${{ secrets.MYSQL_USERNAME }}
           mysql password: ${{ secrets.MYSQL_PASSWORD }}
 
+          # 테스트 진행
+      - name: Test
+        run: ./gradlew test
+
       # Docker 로그인
       - name: Docker Login
         uses: docker/login-action@v1
